--- a/content/_includes/partials/post.njk
+++ b/content/_includes/partials/post.njk
@@ -1,11 +1,11 @@
 <article class="article">
   <a href="{{ authorUrl }}" class="author">
-    <img width="18" height="18" src="{{ avatar }}" alt="{{ authorName }}{{ phrases.sAvatar }}" />
+    {# <img width="18" height="18" src="{{ avatar }}" alt="{{ authorName }}{{ phrases.sAvatar }}" /> #}
     <span>{{ authorName }}</span>
   </a>
 
   <h2 class="post-title">
-    <a href="{{ link }}">
+    <a href="{{ link }}" target="_blank">
       {{ title }}
     </a>
   </h2>
