Post and author links open in new tab

--- a/content/_includes/partials/post.njk
+++ b/content/_includes/partials/post.njk
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="{{ authorUrl }}" class="author">
+  <a href="{{ authorUrl }}" class="author" target="blank">
     {# <img width="18" height="18" src="{{ avatar }}" alt="{{ authorName }}{{ phrases.sAvatar }}" /> #}
     <span>{{ authorName }}</span>
   </a>
